--- a/package.json
+++ b/package.json
@@ -21,13 +21,24 @@
     "devDependencies": {
         "@mdui/icons": "^1.0.2",
         "@types/node": "^22.4.1",
+        "@vite-pwa/assets-generator": "^0.2.4",
         "typedoc": "^0.26.6",
         "typedoc-plugin-markdown": "^4.2.5",
         "typescript": "^5.5.4",
         "vite": "^5.4.2",
-        "vite-plugin-html": "^3.2.2"
+        "vite-plugin-html": "^3.2.2",
+        "vite-plugin-pwa": "^0.20.1",
+        "workbox-core": "^7.1.0",
+        "workbox-precaching": "^7.1.0",
+        "workbox-routing": "^7.1.0",
+        "workbox-strategies": "^7.1.0",
+        "workbox-window": "^7.1.0"
     },
     "dependencies": {
         "mdui": "^2.1.2"
+    },
+    "overrides": {
+        "sharp": "0.32.6",
+        "sharp-ico": "0.1.5"
     }
 }
