--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,19 +23,26 @@ jobs:
         uses: actions/checkout@v5.0.0
         with:
           fetch-depth: 0
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4.1.0
+        with:
+          version: latest
+
       - name: Setup Node
         uses: actions/setup-node@v5.0.0
         with:
-          node-version: 22
+          node-version: 24
+          cache: pnpm
 
       - name: Setup Pages
         uses: actions/configure-pages@v5.0.0
 
       - name: Install dependencies
-        run: rm -f package-lock.json && npm install # 移除 package-lock.json 文件，解决依赖安装冲突
+        run: pnpm install
 
       - name: Build
-        run: npm run build
+        run: pnpm run build
 
       - name: Upload artifact
         if: success() && github.event_name != 'pull_request' && github.repository == 'Super12138/Ask-Yourself'
